# ngic-whisper

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
app/: timer.py  utils.py  webservice.py
app/faster_whisper/: utils.py
test/: compile-results.sh  program.jq  transcribe-audio.sh
